--- a/index.html
+++ b/index.html
@@ -1,45 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-100">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>LOGIN SCM</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Google-Style-Login.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Basic.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-</head>
+  <head>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <title>SIO CHAT MESSENGER</title>
+    <link rel="stylesheet" href="style.css">
 
-<body>
-    <section class="position-relative py-4 py-xl-5" style="background: var(--bs-gray-700);">
-        <div class="container">
-            <div class="row mb-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h2>SIO CHAT MESSENGER</h2>
-                    <p class="w-lg-50">Bienvenue dans SIO CHAT MESSENGER ! Pour pouvoir accéder à votre chat en ligne.<br>Veuillez saisir votre pseudo et votre mot de passe.</p>
-                </div>
-            </div>
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-6 col-xl-4">
-                    <div class="card mb-5">
-                        <div class="card-body d-flex flex-column align-items-center" style="background: var(--bs-gray-700);">
-                            <div class="bs-icon-xl bs-icon-circle bs-icon-primary bs-icon my-4"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-people" style="color: #14ff00;">
-                                    <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"></path>
-                                </svg></div>
-                            <form class="text-center" method="post">
-                                <div class="mb-3"><input class="form-control" type="email" name="Pseudo" placeholder="Pseudo"></div>
-                                <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Mot De Passe "></div>
-                                <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit" style="color: #14ff00;">Se connecter</button></div>
-                                <p class="text-muted">Mot de passe oublié ?</p>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  </head>
+
+  <body class="h-100">
+    <div class="cotainer-fluid h-100" style="height: 100%;">
+      <div class="row h-100">
+        <div class="col-1 col-sm-3 border">
+
+          <ul id="users">Salon</ul>
+
         </div>
-    </section>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-</body>
+
+        <div class="col-11 col-sm-9">
+
+          <ul id="messages"></ul>
+
+        </div>
+
+      </div>
+
+   </div>
+
+    <div class="row form-group">
+
+      <form id="form" action="">
+
+      <div class="col-10 h-100" >
+        <input id="input" class="w-100 h-75" autocomplete="off" />
+      </div>
+
+      <div class="col-2">
+        <button id="button" class="w-100 h-100">Send</button>
+      </div>
+
+      </form>
+
+    </div>
+
+    <script src="socket.io/socket.io.js"></script>
+    <script src="bootdtrap.min.js"></script>
+    <script src="client.js"></script>
+    <script src="server.js"></script>
+
+  </body>
 
 </html>
