--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                                     <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"></path>
                                 </svg></div>
                             <form class="text-center" method="post">
-                                <div class="mb-3"><input class="form-control" type="text" id="login" name="pseudo" placeholder="Pseudo"></div>
+                                <div class="mb-3"><input class="form-control" type="text" id="mail" name="mail" placeholder="Email"></div>
                                 <div class="mb-3"><input class="form-control" type="password" id="password" name="password" placeholder="Mot De Passe"></div>
                                 <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit" id="submit-id" style="background: #004ab8;border-color: #14ff00;color: #14ff00;">Se connecter</button></div>
                                 <p class="text-primary" style="background: var(--bs-gray-800);color: var(--bs-pink);--bs-body-color: var(--bs-blue);">Mot de passe oublié ?</p>
